fix(which-key): Prevent items from overflowing container
Fixes #182

--- a/plugin/styles/proton.less
+++ b/plugin/styles/proton.less
@@ -30,23 +30,17 @@
   font-family: Hack;
 }
 
-.proton-which-key .flex-container {
-  height: 100px;
+.proton-which-key-container {
+  min-height: 100px;
   padding: 0;
   margin: 0;
   margin-top: 5px;
   list-style: none;
 
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: inline-flex;
-
-  -webkit-flex-flow: column wrap;
+  -webkit-column-width: 300px;
 }
 
-.proton-which-key .flex-item {
+.proton-which-key-item {
     width: 300px;
 }
 
